--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ button:hover{
         font-weight: bold;
         font-size: 1rem;
         padding:20px 20px;
+        text-align: center;
     }
     form{
         display:flex;
